STB-1887: Updated user pagination to use the database and added search functionality.
Added a new method to EntraUserRepository to search by name and email
Updated data types to use database entities.
Updated users UI to include search when paging through data